Fixed artifact name in build